5.ingress-subdomain-with-istio/2-tea-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tea-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
        web: tea
    spec:
      containers:
      - image: quay.io/gauravkumar9130/tea
        name: tea
        ports:
        - containerPort: 80
